3_gitops/apps/elk-stack/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  annotations:
    link.argocd.argoproj.io/external-link: "https://grafana.platform.local/"
spec:
  hosts:
    - "grafana.platform.local"
  gateways:
    - platform/platform-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.development.svc.cluster.local
            port:
              number: 80
